# DiagramPche_Qt

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.MD  Run.cpp
App/: Config.hpp  Welcome.hpp
App/GUI/: Canvas.cpp  Canvas.hpp  MainWindow.cpp  MainWindow.hpp  Scene.cpp  Scene.hpp  SceneDrawNode.cpp  ScenePrepareNode.cpp  ScenePreparePath.cpp  Viewer.cpp  Viewer.hpp
App/GUI/Dialog/: BenchmarkDialog.cpp  BenchmarkDialog.hpp  ExportSVGDialog.cpp  ExportSVGDialog.hpp  PreferencesDialog.cpp  PreferencesDialog.hpp  Widgetbench.cpp  Widgetbench.hpp
App/GUI/Main/: MainWindow.cpp  MainWindow.hpp  Scene.cpp  Scene.hpp  ScenePrepareNode.cpp  ScenePreparePath.cpp  Viewer.cpp  Viewer.hpp
App/GUI/SceneItem/: SceneNode.cpp  SceneNode.hpp  ScenePath.cpp  ScenePath.hpp
App/GUI/Support/: ColorPicker.cpp  ColorPicker.hpp  DragButton.cpp  DragButton.hpp  Highlighter.cpp  Highlighter.hpp  HighlighterDark.cpp  HighlighterDark.hpp
App/Helper/: AABR.hpp  BenchmarkCSV.hpp  CPU.hpp  Color.hpp  Draw.hpp  DrawLayer.hpp  Print.hpp
App/Logic/: AppBenchmark.cpp  AppCPU.cpp  AppDialog.cpp  AppFile.cpp  AppSource.cpp  AppWidgetbench.cpp  Parser.cpp  Parser.hpp  ParserNode.cpp  ParserPath.cpp
App/Logic/TOML/: NodePriority.hpp  Parser.cpp  Parser.hpp  ParserNode.cpp  ParserPath.cpp
App/Model/: Node.hpp  NodeType.hpp  Path.hpp  Pathpoint.hpp  PathpointType.hpp  Pivot.hpp  Point.hpp  SceneNodeCrate.hpp  ScenePathCrate.hpp
Dependency/: RSS.hpp  linux-system-usage.hpp
Dependency/QtAwesome7/: .gitignore  CMakeLists.txt
Dependency/qcoro-0.13.0/: CMakeLists.txt  README.md  requirements.txt
Dependency/qcoro-0.13.0/cmake/: AddQCoroLibrary.cmake
Dependency/qcoro-0.13.0/qcoro/: CMakeLists.txt  mixins_p.h  qcoro.h.in  qcoroasyncgenerator.h  qcorogenerator.h  qcorotask.h
Dependency/qcoro-0.13.0/qcoro/core/: qcorofuture.h
Dependency/qcoro-0.13.0/qcoro/dbus/: qcorodbuspendingcall.h  qcorodbuspendingreply.h
Dependency/qcoro-0.13.0/qcoro/impl/: mixins.h  taskpromisebase.h
Resource/Example/: Example3.toml
Resource/Example/Thesis/: BeforeDrawingNodes.toml  ErrorHighlight.toml  Slider.toml  Wireframe.toml
Resource/Scripts/: bench.ps1  bench1.sh  bench2.ps1  bench2.sh
